# strict-kwargs

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.rst  Cargo.toml  README.md  _typos.toml  clippy.toml  example.py  pyproject.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  dependabot-merge.yml  full-dry-runs.yml  lint.yml  publish-pypi.yml  release.yml
benches/: resolver.rs
benches/fixtures/leaf/: pyproject.toml
benches/fixtures/special_forms/: forms.py
benches/fixtures/stdlib_closure/: pyproject.toml
crates/strict-kwargs/: Cargo.toml
crates/strict-kwargs/benches/: resolver.rs
crates/strict-kwargs/benches/fixtures/leaf/: leaf.py
crates/strict-kwargs/benches/fixtures/special_forms/: pyproject.toml
crates/strict-kwargs/benches/fixtures/stdlib_closure/: app.py
crates/strict-kwargs/src/: ast_util.rs  cache.rs  check.rs  config.rs  diagnostic.rs  fix.rs  lib.rs  ty_resolver.rs
crates/strict-kwargs/src/check/: fix_runner.rs
crates/strict-kwargs/src/index/: data_model.rs
docs/: ARCHITECTURE.md
newsfragments/: +bump-ty-floor.change  +cache-environment-dependencies.change  +constructor-runtime-boundaries.change  +directory-walk-errors.change  +generalized-hover-groups.change  +preserve-fix-encoding.change  +project-root-validation.change  +ty-hover-group-reuse.change  +ty-hover-group-unreachable-member.change  +ty-pull-diagnostics.change  +ty-sharded-fallback.change  185.change  192.change  195.change  198.change  200.change  207.change  211.change
scripts/: ci-local.sh  coverage.sh  regenerate-completeness-golden.sh  regenerate-cpython-golden.sh  regenerate-sphinx-completeness-golden.sh  update-typeshed.sh
src/: ast_util.rs  cache.rs  check.rs  config.rs  diagnostic.rs  error.rs  fix.rs  index.rs  lib.rs  limits.rs  main.rs  noqa.rs  resolve.rs  signature.rs  source.rs  ty_resolver.rs
src/check/: file_selection.rs  fix_runner.rs
tests/: cli.rs  completeness.rs  cpython_completeness.rs  fix.rs  import_resolution.rs  integration.rs  resolver_edge_cases.rs  sphinx_completeness.rs  ty_session.rs
tests/common/: mod.rs
tests/data/: cpython_completeness_golden.tsv
tests/golden/: README.md  completeness-requirements-constraints.txt  completeness-unstable-diagnostics.txt  sphinx-completeness-allowed-extra.tsv  sphinx-completeness.tsv  sphinx-requirements-constraints.txt  sphinx-unstable-diagnostics.txt
tests/snapshots/: completeness__pinned_repository_diagnostics.snap  completeness__pinned_repository_diagnostics_macos.snap  sphinx_completeness__pinned_sphinx_diagnostics.snap
