[package]
name = "strict-kwargs"
version = "2026.5.16.1"
edition = "2021"
rust-version = "1.83"
description = "Enforce using keyword arguments where possible (fast, ty/mypy-independent)"
license = "MIT"
readme = "README.md"

[[bin]]
name = "strict-kwargs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
walkdir = "2.5"

# Vendored Ruff Python parser/AST (same API as astral-sh/ruff).
ruff_python_ast = { package = "rustpython-ruff_python_ast", version = "0.15.8" }
ruff_python_parser = { package = "rustpython-ruff_python_parser", version = "0.15.8" }
ruff_text_size = { package = "rustpython-ruff_text_size", version = "0.15.8" }

[dev-dependencies]
tempfile = "3.20"
