[package]
name = "strict-kwargs"
version = "2026.5.16-post.1"
edition = "2021"
rust-version = "1.83"
description = "Enforce using keyword arguments where possible (fast, ty/mypy-independent)"
license = "MIT"
readme = "README.md"

[[bin]]
name = "strict-kwargs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
include_dir = "0.7"
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
walkdir = "2.5"

# Vendored Ruff Python parser/AST (same API as astral-sh/ruff).
ruff_python_ast = { package = "rustpython-ruff_python_ast", version = "0.15.8" }
ruff_python_parser = { package = "rustpython-ruff_python_parser", version = "0.15.8" }
ruff_text_size = { package = "rustpython-ruff_text_size", version = "0.15.8" }

[dev-dependencies]
tempfile = "3.20"

[lints.rust]
# Zero-warning policy: every compiler warning is an error in CI and locally.
warnings = "deny"
# `cargo llvm-cov` injects `--cfg coverage` (and `--cfg coverage_nightly`);
# register them so the zero-warning policy does not reject coverage builds.
unexpected_cfgs = { level = "warn", check-cfg = [
    "cfg(coverage)",
    "cfg(coverage_nightly)",
] }
# This project does not need `unsafe`; forbid it so it cannot be reintroduced.
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
# Strict Clippy groups. `priority = -1` lets the explicit `allow`s below
# override individual lints pulled in by these groups.
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Selected `restriction` lints (the group as a whole is intentionally noisy
# and not meant to be enabled wholesale).
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"

# --- Documented allow-list (too noisy or counter-productive here) ---
# `module_name_repetitions` fights the existing module/type naming.
module_name_repetitions = "allow"
# Some internal helpers are deliberately not split further.
too_many_lines = "allow"
# `map_or_else` rewrites of multi-branch `if let` chains hurt readability.
option_if_let_else = "allow"
