[build-system]
build-backend = "maturin"
requires = [ "maturin>=1.8,<2" ]

[project]
name = "strict-kwargs"
version = "2026.5.19-post.3"
description = "Enforce using keyword arguments where possible."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Adam Dangoor", email = "adamdangoor@gmail.com" },
]
requires-python = ">=3.11"
# `ty` is the required type-inference backend.
# Floor, not a pin: `0.0.23` is the version the LSP/hover integration was
# verified against, so it is the minimum; newer `ty` is allowed. ty is
# pre-1.0, so a future release could change the hover/LSP surface — hover
# parsing is best-effort and fails closed (a miss, never a wrong
# diagnostic), so a drift degrades coverage rather than correctness.
# `uv tool install strict-kwargs` does not put a dependency's entry point on
# PATH, so the binary locates this `ty` next to itself (see `ty_command`).
dependencies = [ "ty>=0.0.23" ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Quality Assurance",
]
keywords = [ "lint", "keyword-arguments", "ty", "mypy" ]
urls.Source = "https://github.com/adamtheturtle/strict-kwargs"
urls.Changelog = "https://github.com/adamtheturtle/strict-kwargs/blob/main/CHANGELOG.rst"

[project.optional-dependencies]
release = [ "check-wheel-contents==0.6.3" ]

[tool.maturin]
bindings = "bin"
module-name = "strict_kwargs"

[tool.strict_kwargs]
ignore_names = []
